Updates to the historicalv2 endpoint.
- Updates to the historicalv2 endpoint to support start and end times.
up to 1ms resolution.
- Updates to the historicalv2 endpoint to support adaptive bucket sizes.
- Updates the permissions for the historicalv2 endpoint. Only users with
AllTimeLocation permission can access historical location data.
- Moves database-related code to the services package.
- Adds a test package for an elastic container with test data.
- Updates to new sharded/privilege.Privilege type.
